@@ -1,5 +1,20 @@
 package br.com.fiap.postech.soat16.fase1.controller;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
+import java.util.List;
+
+import jakarta.ws.rs.core.Response;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+
 import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableRequestDto;
 import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableResponseDto;
 import br.com.fiap.postech.soat16.fase1.dto.pagination.PaginationDto;
@@ -11,20 +26,8 @@ import br.com.fiap.postech.soat16.fase1.exception.ResourceNotFoundException;
 import br.com.fiap.postech.soat16.fase1.model.VehicleType;
 import br.com.fiap.postech.soat16.fase1.service.VehicleService;
 import io.smallrye.mutiny.Uni;
-import jakarta.ws.rs.core.Response;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
 import java.util.UUID;
-
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("VehicleController — Unit Tests")
@@ -63,7 +66,7 @@ class VehicleControllerTest {
 
             assertNotNull(result);
             assertEquals(1, result.content().size());
-            assertEquals("ABC1234", result.content().get(0).licensePlate());
+            assertEquals("ABC1234", result.content().getFirst().licensePlate());
             verify(vehicleService).listAll(pageable, filter);
         }
 
